--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -4,16 +4,31 @@
     <Filter Include="ImGuiRHI">
       <UniqueIdentifier>{234E234F-0F1B-7E5A-3834-6C022460B3E8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ImGuiRHI\Implementation">
+      <UniqueIdentifier>{38416562-A478-ADF9-AD82-111D1939D4F2}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Widgets">
       <UniqueIdentifier>{7CB70329-E896-82C4-F1AE-0D9B5D0DE925}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Editor.h" />
+    <ClInclude Include="src\ImGuiRHI\ImGuiExtension.h">
+      <Filter>ImGuiRHI</Filter>
+    </ClInclude>
     <ClInclude Include="src\ImGuiRHI\ImGuiRHI.h">
       <Filter>ImGuiRHI</Filter>
     </ClInclude>
+    <ClInclude Include="src\ImGuiRHI\Implementation\imgui_impl_dx11.h">
+      <Filter>ImGuiRHI\Implementation</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ImGuiRHI\Implementation\imgui_impl_win32.h">
+      <Filter>ImGuiRHI\Implementation</Filter>
+    </ClInclude>
     <ClInclude Include="src\Widgets\Widget.h">
+      <Filter>Widgets</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Widgets\WidgetMenuBar.h">
       <Filter>Widgets</Filter>
     </ClInclude>
     <ClInclude Include="src\Widgets\WidgetProperties.h">
@@ -26,19 +41,20 @@
       <Filter>Widgets</Filter>
     </ClInclude>
     <ClInclude Include="src\Window.h" />
-    <ClInclude Include="Src\ImGuiRHI\Implementation\imgui_impl_dx11.h">
-      <Filter>ImGuiRHI</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\ImGuiRHI\Implementation\imgui_impl_win32.h">
-      <Filter>ImGuiRHI</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\Widgets\WidgetMenuBar.h" />
-    <ClInclude Include="Src\ImGuiRHI\ImGuiExtension.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Editor.cpp" />
     <ClCompile Include="src\ImGuiRHI\ImGuiRHI.cpp">
       <Filter>ImGuiRHI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ImGuiRHI\Implementation\imgui_impl_dx11.cpp">
+      <Filter>ImGuiRHI\Implementation</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ImGuiRHI\Implementation\imgui_impl_win32.cpp">
+      <Filter>ImGuiRHI\Implementation</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Widgets\WidgetMenuBar.cpp">
+      <Filter>Widgets</Filter>
     </ClCompile>
     <ClCompile Include="src\Widgets\WidgetProperties.cpp">
       <Filter>Widgets</Filter>
@@ -50,12 +66,5 @@
       <Filter>Widgets</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="Src\ImGuiRHI\Implementation\imgui_impl_dx11.cpp">
-      <Filter>ImGuiRHI</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\ImGuiRHI\Implementation\imgui_impl_win32.cpp">
-      <Filter>ImGuiRHI</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\Widgets\WidgetMenuBar.cpp" />
   </ItemGroup>
 </Project>
