--- a/Lemon/Lemon.vcxproj
+++ b/Lemon/Lemon.vcxproj
@@ -138,6 +138,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Math\Math.h" />
+    <ClInclude Include="Src\RenderCore\Geometry\Sphere.h" />
+    <ClInclude Include="Src\Renderer\SceneRenderStates.h" />
+    <ClInclude Include="Src\Resources\Importer\ImageImporter.h" />
+    <ClInclude Include="Src\Resources\ResourceSystem.h" />
     <ClInclude Include="Src\Containers\DynamicRHIResourceArray.h" />
     <ClInclude Include="Src\Containers\ResourceArray.h" />
     <ClInclude Include="Src\Core\Core.h" />
@@ -180,6 +185,7 @@
     <ClInclude Include="Src\Renderer\SceneUniformBuffers.h" />
     <ClInclude Include="Src\Utils\FileUtils.h" />
     <ClInclude Include="Src\World\Components\CameraComponent.h" />
+    <ClInclude Include="Src\World\Components\EnvironmentComponent.h" />
     <ClInclude Include="Src\World\Components\IComponent.h" />
     <ClInclude Include="Src\World\Components\StaticMeshComponent.h" />
     <ClInclude Include="Src\World\Components\TransformComponent.h" />
@@ -602,6 +608,10 @@
     <ClInclude Include="ThirdParty\std_image\std_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\RenderCore\Geometry\Sphere.cpp" />
+    <ClCompile Include="Src\Renderer\SceneRenderStates.cpp" />
+    <ClCompile Include="Src\Resources\Importer\ImageImporter.cpp" />
+    <ClCompile Include="Src\Resources\ResourceSystem.cpp" />
     <ClCompile Include="Src\Core\Engine.cpp" />
     <ClCompile Include="Src\Core\SystemManager.cpp" />
     <ClCompile Include="Src\Core\Timer.cpp" />
@@ -637,6 +647,7 @@
     <ClCompile Include="Src\Renderer\SceneUniformBuffers.cpp" />
     <ClCompile Include="Src\Utils\FileUtils.cpp" />
     <ClCompile Include="Src\World\Components\CameraComponent.cpp" />
+    <ClCompile Include="Src\World\Components\EnvironmentComponent.cpp" />
     <ClCompile Include="Src\World\Components\IComponent.cpp" />
     <ClCompile Include="Src\World\Components\StaticMeshComponent.cpp" />
     <ClCompile Include="Src\World\Components\TransformComponent.cpp" />
