--- a/Lemon/Lemon.vcxproj.filters
+++ b/Lemon/Lemon.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClInclude Include="Src\RHI\D3D11\D3D11SwapChain.h">
       <Filter>Src\RHI\D3D11</Filter>
     </ClInclude>
-    <ClInclude Include="Src\RHI\D3D11\D3D11Texture.h">
-      <Filter>Src\RHI\D3D11</Filter>
-    </ClInclude>
     <ClInclude Include="Src\RHI\D3D11\D3D11Utils.h">
       <Filter>Src\RHI\D3D11</Filter>
     </ClInclude>
@@ -1444,6 +1441,12 @@
     <ClInclude Include="Src\RenderCore\Geometry\GridGizmo.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11State.h" />
     <ClInclude Include="Src\RHI\RHIStaticStates.h" />
+    <ClInclude Include="Src\Resources\Importer\ImageImporter.h" />
+    <ClInclude Include="Src\Resources\ResourceSystem.h" />
+    <ClInclude Include="Src\World\Components\EnvironmentComponent.h" />
+    <ClInclude Include="Src\RenderCore\Geometry\Sphere.h" />
+    <ClInclude Include="Src\Math\Math.h" />
+    <ClInclude Include="Src\Renderer\SceneRenderStateCache.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Core\Engine.cpp">
@@ -1555,5 +1558,10 @@
     <ClCompile Include="Src\Input\Windows\WindowsInputSystem.cpp" />
     <ClCompile Include="Src\RenderCore\Geometry\GridGizmo.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11State.cpp" />
+    <ClCompile Include="Src\Resources\Importer\ImageImporter.cpp" />
+    <ClCompile Include="Src\Resources\ResourceSystem.cpp" />
+    <ClCompile Include="Src\World\Components\EnvironmentComponent.cpp" />
+    <ClCompile Include="Src\RenderCore\Geometry\Sphere.cpp" />
+    <ClCompile Include="Src\Renderer\SceneRenderStateCache.cpp" />
   </ItemGroup>
 </Project>
