--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -139,12 +139,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Editor.h" />
+    <ClInclude Include="src\ImGuiRHI\Icons\IconsFontAwesome4.h" />
     <ClInclude Include="src\ImGuiRHI\ImGuiExtension.h" />
     <ClInclude Include="src\ImGuiRHI\ImGuiRHI.h" />
     <ClInclude Include="src\ImGuiRHI\Implementation\imgui_impl_dx11.h" />
     <ClInclude Include="src\ImGuiRHI\Implementation\imgui_impl_win32.h" />
     <ClInclude Include="src\Widgets\Widget.h" />
-    <ClInclude Include="Src\Widgets\WidgetHelpers.h" />
+    <ClInclude Include="src\Widgets\WidgetHelpers.h" />
     <ClInclude Include="src\Widgets\WidgetMenuBar.h" />
     <ClInclude Include="src\Widgets\WidgetProperties.h" />
     <ClInclude Include="src\Widgets\WidgetSceneHierachy.h" />
@@ -153,10 +154,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Editor.cpp" />
+    <ClCompile Include="src\ImGuiRHI\ImGuiExtension.cpp" />
     <ClCompile Include="src\ImGuiRHI\ImGuiRHI.cpp" />
     <ClCompile Include="src\ImGuiRHI\Implementation\imgui_impl_dx11.cpp" />
     <ClCompile Include="src\ImGuiRHI\Implementation\imgui_impl_win32.cpp" />
-    <ClCompile Include="Src\Widgets\WidgetHelpers.cpp" />
+    <ClCompile Include="src\Widgets\WidgetHelpers.cpp" />
     <ClCompile Include="src\Widgets\WidgetMenuBar.cpp" />
     <ClCompile Include="src\Widgets\WidgetProperties.cpp" />
     <ClCompile Include="src\Widgets\WidgetSceneHierachy.cpp" />
