--- a/Lemon/Lemon.vcxproj
+++ b/Lemon/Lemon.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;ThirdParty\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <MinimalRebuild>false</MinimalRebuild>
@@ -97,7 +97,7 @@
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;ThirdParty\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -120,7 +120,7 @@
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_SHIPPING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty;ThirdParty\glm;ThirdParty\std_image;..;ThirdParty\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -138,11 +138,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Src\Math\Math.h" />
-    <ClInclude Include="Src\RenderCore\Geometry\Sphere.h" />
-    <ClInclude Include="Src\Renderer\SceneRenderStates.h" />
-    <ClInclude Include="Src\Resources\Importer\ImageImporter.h" />
-    <ClInclude Include="Src\Resources\ResourceSystem.h" />
     <ClInclude Include="Src\Containers\DynamicRHIResourceArray.h" />
     <ClInclude Include="Src\Containers\ResourceArray.h" />
     <ClInclude Include="Src\Core\Core.h" />
@@ -152,12 +147,12 @@
     <ClInclude Include="Src\Core\PlatformDetection.h" />
     <ClInclude Include="Src\Core\SystemManager.h" />
     <ClInclude Include="Src\Core\Timer.h" />
-    <ClInclude Include="Src\Input\InputSystem.h" />
     <ClInclude Include="Src\Input\Input.h" />
+    <ClInclude Include="Src\Input\InputSystem.h" />
     <ClInclude Include="Src\Lemon.h" />
     <ClInclude Include="Src\LemonPCH.h" />
     <ClInclude Include="Src\Log\Log.h" />
-    <ClInclude Include="Src\RenderCore\Geometry\GridGizmo.h" />
+    <ClInclude Include="Src\Math\Math.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11CommandList.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11DynamicRHI.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11RHI.h" />
@@ -174,15 +169,20 @@
     <ClInclude Include="Src\RHI\RHIStaticStates.h" />
     <ClInclude Include="Src\RHI\RHISwapChain.h" />
     <ClInclude Include="Src\RenderCore\Geometry\Cube.h" />
+    <ClInclude Include="Src\RenderCore\Geometry\GridGizmo.h" />
+    <ClInclude Include="Src\RenderCore\Geometry\Sphere.h" />
     <ClInclude Include="Src\RenderCore\Material.h" />
     <ClInclude Include="Src\RenderCore\Mesh.h" />
     <ClInclude Include="Src\RenderCore\RenderCore.h" />
     <ClInclude Include="Src\RenderCore\RenderUtils.h" />
     <ClInclude Include="Src\RenderCore\Viewport.h" />
     <ClInclude Include="Src\Renderer\Renderer.h" />
+    <ClInclude Include="Src\Renderer\SceneRenderStates.h" />
     <ClInclude Include="Src\Renderer\SceneRenderTargets.h" />
     <ClInclude Include="Src\Renderer\SceneRendering.h" />
     <ClInclude Include="Src\Renderer\SceneUniformBuffers.h" />
+    <ClInclude Include="Src\Resources\Importer\ImageImporter.h" />
+    <ClInclude Include="Src\Resources\ResourceSystem.h" />
     <ClInclude Include="Src\Utils\FileUtils.h" />
     <ClInclude Include="Src\World\Components\CameraComponent.h" />
     <ClInclude Include="Src\World\Components\EnvironmentComponent.h" />
@@ -191,6 +191,7 @@
     <ClInclude Include="Src\World\Components\TransformComponent.h" />
     <ClInclude Include="Src\World\Entity.h" />
     <ClInclude Include="Src\World\World.h" />
+    <ClInclude Include="ThirdParty\ImGuizmo\ImGuizmo.h" />
     <ClInclude Include="ThirdParty\entt\include\entt.hpp" />
     <ClInclude Include="ThirdParty\glm\glm\common.hpp" />
     <ClInclude Include="ThirdParty\glm\glm\detail\_features.hpp" />
@@ -608,10 +609,6 @@
     <ClInclude Include="ThirdParty\std_image\std_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Src\RenderCore\Geometry\Sphere.cpp" />
-    <ClCompile Include="Src\Renderer\SceneRenderStates.cpp" />
-    <ClCompile Include="Src\Resources\Importer\ImageImporter.cpp" />
-    <ClCompile Include="Src\Resources\ResourceSystem.cpp" />
     <ClCompile Include="Src\Core\Engine.cpp" />
     <ClCompile Include="Src\Core\SystemManager.cpp" />
     <ClCompile Include="Src\Core\Timer.cpp" />
@@ -620,7 +617,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Src\Log\Log.cpp" />
-    <ClCompile Include="Src\RenderCore\Geometry\GridGizmo.cpp" />
+    <ClCompile Include="Src\Math\Math.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11CommandList.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11DynamicRHI.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11IndexBuffer.cpp" />
@@ -636,15 +633,20 @@
     <ClCompile Include="Src\RHI\RHI.cpp" />
     <ClCompile Include="Src\RHI\RHICommandList.cpp" />
     <ClCompile Include="Src\RenderCore\Geometry\Cube.cpp" />
+    <ClCompile Include="Src\RenderCore\Geometry\GridGizmo.cpp" />
+    <ClCompile Include="Src\RenderCore\Geometry\Sphere.cpp" />
     <ClCompile Include="Src\RenderCore\Material.cpp" />
     <ClCompile Include="Src\RenderCore\Mesh.cpp" />
     <ClCompile Include="Src\RenderCore\RenderCore.cpp" />
     <ClCompile Include="Src\RenderCore\RenderUtils.cpp" />
     <ClCompile Include="Src\RenderCore\Viewport.cpp" />
     <ClCompile Include="Src\Renderer\Renderer.cpp" />
+    <ClCompile Include="Src\Renderer\SceneRenderStates.cpp" />
     <ClCompile Include="Src\Renderer\SceneRenderTargets.cpp" />
     <ClCompile Include="Src\Renderer\SceneRendering.cpp" />
     <ClCompile Include="Src\Renderer\SceneUniformBuffers.cpp" />
+    <ClCompile Include="Src\Resources\Importer\ImageImporter.cpp" />
+    <ClCompile Include="Src\Resources\ResourceSystem.cpp" />
     <ClCompile Include="Src\Utils\FileUtils.cpp" />
     <ClCompile Include="Src\World\Components\CameraComponent.cpp" />
     <ClCompile Include="Src\World\Components\EnvironmentComponent.cpp" />
@@ -653,15 +655,13 @@
     <ClCompile Include="Src\World\Components\TransformComponent.cpp" />
     <ClCompile Include="Src\World\Entity.cpp" />
     <ClCompile Include="Src\World\World.cpp" />
+    <ClCompile Include="ThirdParty\ImGuizmo\ImGuizmo.cpp" />
     <ClCompile Include="ThirdParty\std_image\std_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="ThirdParty\imgui\ImGui.vcxproj">
       <Project>{C0FF640D-2C14-8DBE-F595-301E616989EF}</Project>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Src\Math" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
